tera/src/snapshot_tests/snapshots/tera__tests__parser__parser_errors@unexpected_token_test.txt.snap
---
source: src/tests/parser.rs
expression: res.unwrap_err()
input_file: src/tests/parser_inputs/errors/unexpected_token_test.txt
---
 Syntax error --> [unexpected_token_test.txt:1:15]
  |
1 | {{ a is upper(b=,) }}
  |                ^---
  = Found `=` but expected `)` or `,`.
